<resources>
    <string name="app_name">GitHub User</string>
    <string name="details_repo_count">%d Repository</string>
    <string name="details_follower_count">%d Follower</string>
    <string name="details_following_count">%d Following</string>
    <string name="name">Name</string>
    <string name="user_name">User Name</string>
    <string name="company">Company</string>
    <string name="location">Location</string>

    <string name="action_search">Search</string>

    <string name="message_cannot_load">Cannot load %1$s. Error: \n%2$s\nTry again.</string>
    <string name="action_reload">Reload</string>
    <string name="user_list">user list</string>
    <string name="user_details">user details</string>
    <string name="user_follower_list">user follower list</string>
    <string name="user_following_list">user following list</string>
    <string name="favorite_list">favorite list</string>

    <string name="following">Following</string>
    <string name="follower">Follower</string>

    <string name="action_favorite">Favorite</string>
    <string name="action_settings">Settings</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_settings">Settings</string>

    <string name="reminder_title">Reminder Feature</string>
    <string name="reminder_summary">Reminder at 09.00 AM</string>
    <string name="reminder_enabled">Reminder enabled</string>
    <string name="reminder_disabled">Reminder disabled</string>

    <string name="notification_reminder_title">GitHub Reminder</string>
    <string name="notification_reminder_text">Let open Github User App</string>
</resources>
